--- a/src/etautotracker/package.json
+++ b/src/etautotracker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "etautotracker",
+  "name": "ETAutoTracker",
   "version": "1.0.0",
   "description": "",
   "main": "ETAutoTracker.js",
